# attitude_controller

./: CMakeLists.txt  package.xml
model/: CMakeLists.txt  Makefile  lqr_feedback_calculation.m  quadNMPC  quad_nmpc.cpp  quad_nmpc_sim.cpp
model/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
model/devel/lib/attitude_controller/: attitude_controller_node
model/devel/lib/pkgconfig/: attitude_controller.pc
model/devel/share/attitude_controller/cmake/: attitude_controllerConfig.cmake
model/nonlinear_mpc_control_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  test
src/: attitude_controller_node.cpp
